[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = ""
authors = ["AnithaKola7003 <kolaanitha7003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
pandas = "^2.3.0"
typer = "^0.16.0"
beautifulsoup4 = "^4.13.4"
lxml = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
